# granz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml  claude.yml  enforce-exclusive-labels.yml  issue-labeler.yml  release.yml
docs/: database-schema.md  search-roadmap.md  transcript-segmentation.md
docs/prototypes/: labeling-ui.html
scripts/: granola-api.py  granola-token.py
src/: main.rs  models.rs  platform.rs  tiptap.rs
src/api/: auth.rs  client.rs  mod.rs  token_store.rs  types.rs
src/cli/: args.rs  context.rs
src/commands/: benchmark.rs  browse.rs  calendars.rs  db.rs  embed.rs  grep.rs  info.rs  meetings.rs  mod.rs  people.rs  recipes.rs  search.rs  search_common.rs  sync.rs  sync_granola.rs  sync_panels.rs  sync_transcripts.rs  templates.rs  transcripts.rs  update.rs
src/db/: calendars.rs  common.rs  connection.rs  info.rs  meetings.rs  mod.rs  notes.rs  panels.rs  people.rs  recipes.rs  schema.rs  sync.rs  templates.rs  test_fixtures.rs  transcripts.rs
src/embed/: chunk.rs  chunker.rs  config.rs  headers.rs  mod.rs  model.rs  progress.rs  rerank.rs  search.rs  store.rs
src/output/: card.rs  format.rs  json.rs  mod.rs  progress.rs  table.rs
src/query/: adjust.rs  dates.rs  evidence.rs  filter.rs  fts.rs  fusion.rs  hybrid.rs  mod.rs  rerank.rs  search.rs  shape.rs  text.rs
src/sync/: config.rs  dropbox.rs  metadata.rs  mod.rs  oauth.rs
src/update/: download.rs  github.rs  mod.rs  platform.rs  wait.rs
tests/: date_filter.rs  end_to_end.rs  errors.rs  people_junction.rs  search.rs
(+27 files in other folders)
