[package]
name = "grans"
version = "0.0.0-dev"
edition = "2024"

[features]
default = []
cuda = ["ort/cuda", "ort/copy-dylibs"]
directml = ["ort/directml", "ort/copy-dylibs"]
coreml = ["ort/coreml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"
colored = "2"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["download-binaries", "tls-rustls"] }
sha2 = "0.10"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }
rand = "0.8"
toml = "0.8"
base64 = "0.22"
open = "5"
self-replace = "1.5"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["color"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
strip-ansi-escapes = "0.2.1"
tempfile = "3"

# CI release profile: faster builds with slightly less optimization
[profile.ci-release]
inherits = "release"
codegen-units = 4   # More parallelism (release default is 1)
